# server/models/User.go
@@ -9,4 +9,10 @@ type User struct {
 	FirstName string `json:"first_name"`
 	LastName string `json:"last_name"`
 	PhoneNumber string `json:"phone_number"`
+	Role string `swaggerignore:"true" json:"role" gorm:"default:user;check:role='user' OR role='admin'"`
+}
+
+type UserLoginReq struct  {
+	Password string `json:"password" example:"12345678"`
+	Email    string `gorm:"unique;not null" json:"email" example:"example@example.com"`
 }
